--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ archives_base_name=modid
 fabric_api_version=0.73.2+1.19.2
 fabric_kotlin_version=1.9.3+kotlin.1.8.20
 architectury_version=6.5.69
-cobblemon_version=1.3.2
-paragon_version=fabric-3.0.1-1.19x
+cobblemon_version=1.3.3+1.19.2-SNAPSHOT
+jankson_version=1.2.2
+paragon_version=fabric-3.0.2-1.19x
 junit_version=5.9.2
